<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Main.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/track_your_family_now"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16ssp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_parent"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_30sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_4sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/parent" />

                <TextView
                    android:id="@+id/tv_login_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_18sdp"
                    android:text="@string/login_as_parent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_child"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_4sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/children" />

                <TextView
                    android:id="@+id/tv_login_child"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_18sdp"
                    android:text="@string/children" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>